--- a/petstagram/templates/base/base.html
+++ b/petstagram/templates/base/base.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+<p>{{ request.user }}</p>
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom:2%">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
