--- a/petstagram/templates/base/base.html
+++ b/petstagram/templates/base/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,7 +14,6 @@
 </head>
 
 <body>
-<p>{{ request.user }}</p>
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom:2%">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -41,9 +39,10 @@
                     </li>
                 {% endif %}
                 <li class="nav-item">
-
                     <a class="nav-link" href="{% url 'profile' request.user.id %}">Profile</a>
-
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
             {% endif %}
         </ul>
