--- a/petstagram/templates/base/base.html
+++ b/petstagram/templates/base/base.html
@@ -59,7 +59,7 @@
 {% endblock %}
 <!-- Page Footer -->
 <footer class="fixed-bottom card-footer ">
-    <div>@2022 Python Web Basics Workshop at SoftUni</div>
+    <div>@2022 Python Web Boyan Todorov</div>
 </footer>
 <!-- End Page Footer -->
 
